# Geniuz

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
Geniuz/: ContentView.swift  Geniuz.entitlements  GeniuzApp.swift  GeniuzMenu.swift  GeniuzService.swift  Persistence.swift
Geniuz.xcodeproj/: project.pbxproj
Geniuz/Geniuz.xcdatamodeld/: .xccurrentversion
GeniuzUITests/: GeniuzUITests.swift
cli/: Cargo.toml
cli/schema/: schema.sql
cli/src/: cli.rs  db.rs  embed_client.rs  embed_server.rs  embedding.rs  main.rs  mcp.rs
desktop/: VolumeIcon.icns  Welcome to Geniuz.rtf
desktop/Geniuz/: GeniuzService.swift
desktop/Geniuz.xcodeproj/: project.pbxproj
desktop/Geniuz/Assets.xcassets/MenuBarIcon.imageset/: Contents.json
desktop/GeniuzTests/: GeniuzTests.swift
desktop/GeniuzUITests/: GeniuzUITestsLaunchTests.swift
installer/windows/: Geniuz.iss  README.md
installer/windows/saved-for-later/: README.md
schema/: schema.sql
skills/: SKILL.md
src/: adapter.rs  cli.rs  db.rs  embed_client.rs  embed_server.rs  embedding.rs  lib.rs  main.rs  mcp.rs  tray.rs
